--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,5 +1,10 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    width: 100vw;
+    margin: 0;
+
+    display: flex;
+    justify-content: center;
 }
 
 label {
@@ -10,8 +15,13 @@ label {
 #content {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 1rem
+    align-items: stretch;
+    gap: 1rem;
+
+    max-width: 800px;
+
+    margin: 5% 10% 5% 10%;
+
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -22,11 +32,12 @@ ul {
     list-style: none;
 }
 
-#edu-e-form li {
+li {
     padding: .5rem;
 }
 
-#edu-e-form li:not(:last-child) {
+
+.edit-area li:not(:last-child) {
     border-bottom: 1px solid black;
 }
 
@@ -40,11 +51,6 @@ ul {
     width: 42px;
 }
 
-/* .del-icon-box {
-    border: 1px solid black;
-    width: 100%;
-} */
-
 .del-icon {
     height: 21px;
     width: 21px;
@@ -56,12 +62,52 @@ ul {
     justify-content: space-between;
 }
 
+#prac-e-form .deletable-li .prac-edit-area {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: .25rem;
+}
+
+#prac-e-form .deletable-li .prac-edit-area :first-child,
+#prac-e-form .deletable-li .prac-edit-area :last-child {
+    grid-column: 1 / 3;
+}
+
+#resume-head {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 1rem;
+
+    /* display: flex; */
+    /* justify-content: space-between; */
+    /* width: 100%; */
+    /* gap: 1rem; */
+}
+
+#profile-pic {
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+
+#profile-pic img {
+    max-height: 200px;
+}
+
+#pic-picker {
+    display: none;
+}
+
+.deletable-li label {
+    display: flex;
+    flex-direction: column;
+}
+
 li h5{
     margin-left: 1rem;
 }
 
 .section {
-    width: 75%;
     position: relative;
     padding: 1rem;
     border: 1px solid black;
@@ -81,7 +127,8 @@ button:hover {
     background-color: white;
 }
 
-input {
+input,
+textarea {
     display: block;
 }
 
